--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1791,6 +1791,10 @@ input, select, textarea {
 				margin: 0 auto;
 				width: auto;
 			}
+			.image.small{
+				display: block;
+				width: 50%;
+			}
 
 /* video */
 
